--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Profiles#edit</h1>
-<p>Find me in app/views/profiles/edit.html.erb</p>
+<h1> Edit PROFILE </h1>
+<%= form_for @profile, html: {multipart: true} do |f| %>
+  <%= f.label(:image)%>
+	<%= f.file_field(:image)%>
+	<br/>
+	<%= f.label(:name)%>
+	<%= f.text_field(:name)%>
+	<br/>
+	<%= f.label(:phone_number)%>
+	<%= f.text_field(:phone_number)%>
+	<br/>
+	<%= f.label(:bio)%> 
+	<%= f.text_area(:bio)%>
+	<br/>
+	<%= f.label(:user_id)%>
+	<%= f.text_field(:user_id)%>
+	<br/>
+	<%= f.label(:created_at)%>
+	<%= f.date_select(:created_at)%>
+	<br/>
+	<%= f.label(:updated_at)%>
+	<%= f.date_select(:updated_at)%>
+	<br/>
+	<%= f.submit("Submit")%>
+<%end%>
