--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Profiles#show</h1>
-<p>Find me in app/views/profiles/show.html.erb</p>
+<p><%= image_tag @profile.image.url(:thumb) %></p>
+<h1><%= @profile.name %></h1>
+<p> Bio: <%= @profile.bio %></p>
+
+
+<%= link_to("Back", profiles_path(@profile.id)) %>
+<%= link_to("Edit", edit_profile_path(@profile.id)) %>
+<%= link_to("Delete", profile_path(@profile.id), method: :delete) %>
