--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Events#index</h1>
-<p>Find me in app/views/events/index.html.erb</p>
+<h1>events#index page (home page?)</h1>	
+
+<!-- CALENDAR START -->
+<div id="events">
+  <h2 id="month">
+		<%= link_to "<", date: @date.prev_month %>
+		<%= @date.strftime("%B %Y") %>
+		<%= link_to ">", date: @date.next_month %>
+	</h2>
+    
+	<%= calendar @date do |date| %>
+		<%= date.day %>
+	  <% if @events_by_date[date] %>
+			<ul>
+				<% @events_by_date[date].each do |event| %>
+					<li><%= link_to event.title, event %></li>
+				<% end %>
+			</ul>
+    <% end %>
+	<% end %>
+</div>
+<!-- CALENDAR END -->
+
+<%= link_to "new event", new_event_path %>
