calendar feature is now fully functional

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,7 +13,7 @@
 	  <% if @events_by_date[date] %>
 			<ul>
 				<% @events_by_date[date].each do |event| %>
-					<li><%= link_to event.title, event %></li>
+					<li><%= link_to event.event_name, event %></li>
 				<% end %>
 			</ul>
     <% end %>
