--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -3,17 +3,20 @@
 	<%= f.label(:event_name)%> 
 	<%= f.text_field(:event_name)%>
 	<br/>
-	<%= f.label(:event_start)%>
-	<%= f.date_select(:event_start)%>
+	<%= f.label(:event_date)%>
+	<%= f.date_select(:event_date)%>
+	<br/>
+	<%= f.label(:start_time)%>
+	<%= f.text_field(:start_time)%>
 	<br/>
 	<%= f.label(:event_desc)%>
 	<%= f.text_area(:event_desc)%>
 	<br/>
 	<%= f.label(:user_id)%>
-	<%= f.text_area(:user_id)%>
+	<%= f.text_field(:user_id)%>
 	<br/>
 	<%= f.label(:venue_id)%>
-	<%= f.date_select(:venue_id)%>
+	<%= f.text_field(:venue_id)%>
 	<br/>
 	<br/>
 	<%= f.submit("Submit")%>
