--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,4 @@
-<h1><%= @event.title %></h1>
-<h2><%= @event.summary %></h2>
-<h2><%= @event.start_date %></h2>
+<h1><%= @event.event_name %></h1>
+<h2><%= @event.event_desc %></h2>
+<h2><%= @event.event_date %></h2>
+<h2><%= @event.start_time %></h2>
