--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <header>
+    <%= render 'layouts/navigation' %>
+  </header>
+  <main role="main">
+   <%= render 'layouts/messages' %>
+   <%= yield %>
+  </main>
 
 <%= yield %>
 
