--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,26 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'jquery.js' %>
+  <%= javascript_include_tag 'creative.js' %>
+  <%= javascript_include_tag 'wow.js' %>
+  <%= javascript_include_tag 'classie.js' %>
+  <%= javascript_include_tag 'cbpAnimatedHeader.js' %>
+  <%= javascript_include_tag 'jquery.fittext.js' %>
+  <%= javascript_include_tag 'jquery.easing.min.js' %>
   <%= csrf_meta_tags %>
 
   <link href="css/sb-admin.css" rel="stylesheet">
-</head>
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
+    </head>
 
 <body>
     <% if user_signed_in? %>
