--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,23 +1,28 @@
-<h1>Edit Event</h1>
-<%= form_for @event, html: {multipart: true} do |f| %>
-	<%= f.label(:event_name)%> 
-	<%= f.text_field(:event_name)%>
-	<br/>
-	<%= f.label(:event_date)%>
-	<%= f.date_select(:event_date)%>
-	<br/>
-	<%= f.label(:start_time)%>
-	<%= f.text_field(:start_time)%>
-	<br/>
-	<%= f.label(:event_desc)%>
-	<%= f.text_area(:event_desc)%>
-	<br/>
-	<%= f.label(:user_id)%>
-	<%= f.text_field(:user_id)%>
-	<br/>
-	<%= f.label(:venue_id)%>
-	<%= f.text_field(:venue_id)%>
-	<br/>
-	<br/>
-	<%= f.submit("Submit")%>
-<%end%>
+<div class="form".
+	<h1>Edit Event</h1>
+	<%= form_for @event, html: {multipart: true} do |f| %>
+		<%= f.label(:event_name)%> 
+		<%= f.text_field(:event_name)%>
+		<br/>
+		<%= f.label(:event_date)%>
+		<%= f.date_select(:event_date)%>
+		<br/>
+		<%= f.label(:start_time)%>
+		<%= f.text_field(:start_time)%>
+		<br/>
+		<%= f.label(:event_desc)%>
+		<%= f.text_area(:event_desc)%>
+		<br/>
+		<%= f.label(:user_id)%>
+		<%= f.text_field(:user_id)%>
+		<br/>
+		<%= f.label(:venue_id)%>
+		<%= f.text_field(:venue_id)%>
+		<br/>
+		<br/>
+		<%= f.submit("Submit")%>
+	<%end%>
+
+	<%= link_to("Delete", event_path(@event.id), method: :delete) %>
+
+</div>
