--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,3 +2,8 @@
 <h2><%= @event.event_desc %></h2>
 <h2><%= @event.event_date %></h2>
 <h2><%= @event.start_time %></h2>
+
+<%= link_to("Back", events_path) %>
+<%= link_to("Edit", edit_event_path(@event.id)) %>
+<%= link_to("Delete", event_path(@event.id), method: :delete) %>
+<%= link_to("Add another event", new_event_path) %>
