--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,9 @@
 <div class="form".
 	<h1>Edit Event</h1>
 	<%= form_for @event, html: {multipart: true} do |f| %>
+	  <%= f.label(:image)%>
+		<%= f.file_field(:image)%>
+		<br/>
 		<%= f.label(:event_name)%> 
 		<%= f.text_field(:event_name)%>
 		<br/>
