--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,6 +7,9 @@
 <h1>New Event</h1>
 
 <%= form_for @event, html: {multipart: true} do |f| %>
+ 	<%= f.label(:image)%>
+	<%= f.file_field(:image)%>
+	<br/>
 	<%= f.label(:event_name)%> 
 	<%= f.text_field(:event_name)%>
 	<br/>
