--- a/app/assets/stylesheets/logged_in.css
+++ b/app/assets/stylesheets/logged_in.css
@@ -6,13 +6,13 @@
 
 /* Global Styles */
 
-body {
+.body {
     margin-top: 100px;
     background-color: #222;
 }
 
 @media(min-width:768px) {
-    body {
+    .body {
         margin-top: 50px;
     }
 }
