--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,27 +9,20 @@
 
   <title>SceneSurvivalKit</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= javascript_include_tag 'jquery.js' %>
-  <%= javascript_include_tag 'creative.js' %>
-  <%= javascript_include_tag 'wow.js' %>
-  <%= javascript_include_tag 'classie.js' %>
-  <%= javascript_include_tag 'cbpAnimatedHeader.js' %>
-  <%= javascript_include_tag 'jquery.fittext.js' %>
-  <%= javascript_include_tag 'jquery.easing.min.js' %>
+
+  
   <%= csrf_meta_tags %>
 
-  <link href="css/sb-admin.css" rel="stylesheet">
+  <link href="/assets/logged_in.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="/assets/animate.min.css" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/creative.css" type="text/css">
+    <link rel="stylesheet" href="/assets/creative.css" type="text/css">
     </head>
 
     <% if user_signed_in? %>
@@ -37,11 +30,15 @@
     <% else %>
         <%= render 'layouts/home'%>
     <% end %>
-    
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
 
 <%= yield %>
+  <%= javascript_include_tag 'application' %>
+    <!-- Plugin JavaScript -->
+    <script src="/assets/jquery.easing.min.js"></script>
+    <script src="/assets/jquery.fittext.js"></script>
+    <script src="/assets/wow.min.js"></script>
 
+    <!-- Custom Theme JavaScript -->
+    <script src="/assets/creative.js"></script>
 </body>
 </html>
