fixing a few devise things
Change-Id: I5a74ff4a81bc3d9f147e299eee2c6d8ede19c285

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,11 @@
 </head>
 
 <body>
-
-  <main role="main">
+  
+<header>
     <%= render 'layouts/messages' %>
-  </main>
+</header>
+
     <% if user_signed_in? %>
         <%= render 'layouts/logged_in'%>
     <% else %>
