updated home page
Change-Id: I4acc13805873d7e79150ea401309b31a675d3e21

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -100,7 +100,7 @@
     </section>
 
     <section id="services">
-        
+        Events...
     </section>
 
     <section class="no-padding" id="portfolio">
