--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,12 +32,11 @@
 
 <%= yield %>
   <%= javascript_include_tag 'application' %>
-    <!-- Plugin JavaScript -->
+    <script src="/assets/cbpAnimatedHeader.js"></script>
     <script src="/assets/jquery.easing.min.js"></script>
     <script src="/assets/jquery.fittext.js"></script>
     <script src="/assets/wow.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
     <script src="/assets/creative.js"></script>
+    <script src="/assets/classie.js"></script>
 </body>
 </html>
