removed founders view page
Change-Id: I8fb29f0a21f4f34106852d5f490e05e45799be59

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,7 +52,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">To Support and Connect Artists</h2>
                     <hr>
-                    <p class="text-faded"> [Scene Survival Kit] aims to provide a resource for musicians to connect with venues and visual artists, thus spuring mutual promotion, and provide a social platform for the music community.</p>
+                    <p class="text-faded"> [Scene Survival Kit] aims to provide resources for musicians to connect with venues and visual artists, thus spuring mutual promotion, and to tighten the bonds of the art community by offering a social platform.</p>
                     <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
                 </div>
             </div>
@@ -70,7 +70,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x glyphicon glyphicon-search bigger wow bounceIn text-primary"></i>
                         <h3>Find & Request</h3>
-                        <p class="text-muted">Looking for a musician to play for a show, a venue to perform at, or a visual artist to design and produce merchandise? Search for the right people--'cause you're in the right place.</p>
+                        <p class="text-muted">Looking for a musician to play for a show, a venue to perform at, or a visual artist to design and produce merchandise? Search for the right people in the right place.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
