changed font size for headers and icons
Change-Id: I72d8c1daa8591ae0ee47f833bd0e218ac8284947

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#musicians">Featured Musicians</a>
+                        <a class="page-scroll" href="#artists">Featured Artists</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Founders</a>
@@ -97,11 +97,11 @@
             </div>
         </div>
     </section>
-    <section class="bg-primary" id="musicians">
+    <section class="bg-primary" id="artists">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading bigger">Featured Musicians</h2>
+                    <h2 class="section-heading larger">Featured Artists</h2>
                     <br/><br/>
                 </div>
             </div>
@@ -213,9 +213,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">From Yours Truly</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Here are the founders + developers of Scene Survival Kit.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
