--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -114,10 +114,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Profile Type
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Profile Name
                                 </div>
                             </div>
                         </div>
@@ -129,10 +129,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Profile Type
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Profile Name
                                 </div>
                             </div>
                         </div>
@@ -144,10 +144,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Profile Type
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Profile Name
                                 </div>
                             </div>
                         </div>
@@ -159,10 +159,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Profile Type
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Profile Name
                                 </div>
                             </div>
                         </div>
