--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -174,10 +174,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Profile Type
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Profile Name
                                 </div>
                             </div>
                         </div>
@@ -189,10 +189,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Profile Type
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Profile Name
                                 </div>
                             </div>
                         </div>
