added visitor view partial file
Change-Id: I1af2426cf6da465ad2098748974ae205ce040cd5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,10 @@
     <% if user_signed_in? %>
         <%= render 'layouts/logged_in'%>
     <% else %>
+        <%= render 'layouts/visitor'%>
     <% end %>
 
-<%= yield %>
+  <%= yield %>
   <%= javascript_include_tag 'application' %>
     <script src="/assets/cbpAnimatedHeader.js"></script>
     <script src="/assets/jquery.easing.min.js"></script>
