updated logged in nav
Change-Id: I4a1b4f376655338c6d3b563f706f7c8cfe0fcdd2

--- a/app/views/layouts/_logged_in.html.erb
+++ b/app/views/layouts/_logged_in.html.erb
@@ -132,7 +132,7 @@
                         <%= link_to(" Forum", root_path, class: "fa fa-fw fa-forumbee") %>
                     </li>
                     <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo" class="fa fa-fw fa-user"> My Profile</a>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo" class="fa fa-fw fa-user"> My Profile <span class="fa fa-w fa-sort-desc"></a>
                         <ul id="demo" class="collapse">
                             <li>
                                 <%= link_to(" View", profile_path(id: current_user.id), class: "fa fa-fw fa-eye") %>
