--- a/app/views/layouts/_logged_in.html.erb
+++ b/app/views/layouts/_logged_in.html.erb
@@ -104,14 +104,11 @@
                             <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                        </li>
-                        <li>
                             <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <%= link_to("Log Out", destroy_user_session_path, method: :delete)%>
                         </li>
                     </ul>
                 </li>
@@ -121,6 +118,9 @@
                 <ul class="nav navbar-nav side-nav">
                     <li>
                         <%= link_to(" Home", root_path, class: "fa fa-fw fa-home") %>
+                    </li>
+                    <li> 
+                        <%= link_to(" My Profile", profile_path(id: current_user.id), class: "fa fa-fw fa-user") %>
                     </li>
                     <li>
                         <%= link_to(" Requests", root_path, class: "fa fa-fw fa-hand-o-right") %>
@@ -136,17 +136,6 @@
                     </li>
                     <li>
                         <%= link_to(" Forum", root_path, class: "fa fa-fw fa-forumbee") %>
-                    </li>
-                    <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo" class="fa fa-fw fa-user"> My Profile <span class="fa fa-w fa-sort-desc"></a>
-                        <ul id="demo" class="collapse">
-                            <li>
-                                <a href="<%= profile_path(id: current_user.id) %>"><span class="fa fa-fw fa-eye"></span> View</a>
-                            </li>
-                            <li>
-                                 <a href="<%= edit_profile_path(id: current_user.id) %>"><span class="fa fa-fw fa-pencil"></span> Edit</a>
-                            </li>
-                        </ul>
                     </li>
                     <li class="active">
                         <%= link_to("Search", root_path, class: "fa fa-fw fa-file")%>
