added login button on homepage
Change-Id: I20d7498247b4a780b5bf3bfda399bc5f7ce08c62

--- a/app/views/layouts/_visitor.html.erb
+++ b/app/views/layouts/_visitor.html.erb
@@ -39,7 +39,8 @@
                 <h1>Find The Resources You Need to Survive the Scene.</h1>
                 <hr>
                 <p>Connect with musicians, venues, or visual artists for your show.</p>
-                <%= link_to("Sign Up", new_user_registration_path, class: "btn btn-primary btn-xl page-scroll")%>
+                <%= link_to("Login", new_user_registration_path, class: "btn btn-default btn-xl page-scroll")%>
+                <%= link_to("Sign Up", new_user_session_path, class: "btn btn-primary btn-xl page-scroll")%>
             </div>
         </div>
     </header>
@@ -66,28 +67,28 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x glyphicon glyphicon-search bigger wow bounceIn text-primary"></i>
+                        <i class="fa fa-4x fa-search bigger wow bounceIn text-primary"></i>
                         <h3>Find & Request</h3>
                         <p class="text-muted">Looking for a musician to play for a show, a venue to perform at, or a visual artist to design and produce merchandise? Search for the right people in the right place.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x glyphicon glyphicon-heart-empty bigger wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <i class="fa fa-4x fa-heart-o bigger wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Musician Dating</h3>
                         <p class="text-muted">A Tinder-inspired service for individual musicians seeking bands, or bands that are seeking members, to appeal themselves to others. Find your musical soul mate now.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x glyphicon glyphicon-bullhorn bigger wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <i class="fa fa-4x fa-bullhorn bigger wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Advertise Events</h3>
                         <p class="text-muted">In addition to finding resources, we also help you spread the word about your gig! Whether you're a venue representative, musician, or artist, you may post your events in our calendar and advertise as much as you want.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x glyphicon glyphicon-globe bigger wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <i class="fa fa-4x fa-forumbee bigger wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Community Forum</h3>
                         <p class="text-muted">Write posts and raise discussions about issues you care about in the art/music world. Make conversations, make friends!</p>
                     </div>
