--- a/app/assets/stylesheets/creative.css
+++ b/app/assets/stylesheets/creative.css
@@ -339,7 +339,7 @@ header .header-content .header-content-inner p {
 .btn-default {
     border-color: #fff;
     color: #222;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.5);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
