--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,30 +1,32 @@
-<div id="wrapper"> 
-	<div id="page-wrapper">
+<% if user_signed_in? %>
+	<div id="wrapper"> 
+		<div id="page-wrapper">
 
-	    <div class="container-fluid">
+		    <div class="container-fluid">
 
-	        <!-- Page Heading -->
-	        <div class="row">
-	            <div class="col-lg-12">
-	                <h1 class="page-header">
-	                	Welcome Home.
-	                    <small>Subheading</small>
-	                </h1>
-	                <ol class="breadcrumb">
-	                    <li>
-	                        <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
-	                    </li>
-	                    <li class="active">
-	                        <i class="fa fa-file"></i> Blank Page
-	                    </li>
-	                </ol>
-	            </div>
-	        </div>
-	        <!-- /.row -->
+		        <!-- Page Heading -->
+		        <div class="row">
+		            <div class="col-lg-12">
+		                <h1 class="page-header">
+		                	Welcome Home.
+		                    <small>Subheading</small>
+		                </h1>
+		                <ol class="breadcrumb">
+		                    <li>
+		                        <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+		                    </li>
+		                    <li class="active">
+		                        <i class="fa fa-file"></i> Blank Page
+		                    </li>
+		                </ol>
+		            </div>
+		        </div>
+		        <!-- /.row -->
 
-	    </div>
-	    <!-- /.container-fluid -->
+		    </div>
+		    <!-- /.container-fluid -->
 
+		</div>
 	</div>
-</div>
-<!-- /#page-wrapper -->
+	<!-- /#page-wrapper -->
+<% end %>
