beginning to install mailboxer
Change-Id: Iae7f25a6cb349d9a019f6a7af8fa654a10ea9adf

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'bootstrap/theme';
 @import "sb-admin";
 @import "logged_in";
 @import "creative";
