--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,41 +1,25 @@
-<div class="authform">
-  <h3>Edit <%= resource_name.to_s.humanize %></h3>
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
-    <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label %>
-      <%= f.email_field :email, :autofocus => true, class: 'form-control', :placeholder 'Email' %>
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
-    </div>
-    <fieldset>
-      <p>Leave these fields blank if you don't want to change your password.</p>
+
+<div class="container">
+  <div class="authform">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:role => 'form'}) do |f| %>
+      <h2>Edit</h2>
       <div class="form-group">
-        <%= f.label  %>
-        <%= f.password_field :password, :autocomplete => 'off', class: 'form-control', :placeholder 'password' %>
+        <%= f.text_field :name, autofocus: true, class: "form-control", :placeholder => 'Name' %>
       </div>
       <div class="form-group">
-        <%= f.label %>
-        <%= f.password_field :password_confirmation, class: 'form-control', :placeholder 'Password Confirmation' %>
+        <br/>
+        <%= f.email_field :email, autofocus: true, class: "form-control", :placeholder => 'Email' %>
       </div>
-    </fieldset>
-    <fieldset>
-      <p>You must enter your current password to make changes.</p>
       <div class="form-group">
-        <%= f.label %>
-        <%= f.password_field :current_password, class: 'form-control', :placeholder 'Current Password' %>
+        <%= f.password_field :password, autocomplete: "off", class: 'form-control', :placeholder => 'Password. Minimum of 8 characters.' %>
       </div>
-    </fieldset>
-    <%= f.submit 'Update', :class => 'button left' %>
-  <% end %>
+      <div class="form-group">
+        <br/>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', :placeholder => 'Password confirmation' %>
+      </div>
+      <div class="actions">
+        <%= f.submit 'Signup', :class => 'button left' %>
+      </div>
+    <% end %>
+  </div>
 </div>
-<div class="authform">
-
-<h3>Cancel Account</h3>
-<p>Unhappy? We'll be sad to see you go.</p>
-<%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right' %>
-
-</div>
-
-<%= link_to "Back", :back %>
