--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,9 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:role => 'form'}) do |f| %>
       <h2>Sign up</h2>
       <div class="form-group">
+        <%= f.text_field :name, autofocus: true, class: "form-control", :placeholder => 'Name' %>
+      </div>
+      <div class="form-group">
         <br/>
         <%= f.email_field :email, autofocus: true, class: "form-control", :placeholder => 'Email' %>
       </div>
