--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @event.event_name %></h1>
-<p><%= @event.image %></p>
+<p><%= image_tag @event.image.url(:thumb) %></p>
 <h2><%= @event.event_desc %></h2>
 <h2><%= @event.event_date %></h2>
 <h2><%= @event.start_time %></h2>
