--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,10 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import 'bootstrap/theme';
-@import "sb-admin";
-@import "logged_in";
-@import "creative";
-@import "animate.min";
-@import "font-awesome-sprockets";
-@import "font-awesome";
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+ @import 'bootstrap/theme';
+ // @import "sb-admin";
+ @import "logged_in";
+ @import "creative";
+ @import "animate.min";
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
+ // @import 'chosen';
