--- a/app/views/layouts/_logged_in.html.erb
+++ b/app/views/layouts/_logged_in.html.erb
@@ -112,7 +112,7 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
                         </li>
                     </ul>
                 </li>
@@ -128,6 +128,9 @@
                     </li>
                     <li>
                         <%= link_to(" Dating", root_path, class: "fa fa-fw fa-heart-o") %>
+                    </li>
+                    <li>
+                        <%= link_to 'Your Conversations', conversations_path %>
                     </li>
                     <li>
                         <%= link_to(" Forum", root_path, class: "fa fa-fw fa-forumbee") %>
