fixed devise message placement
Change-Id: Ie5dc8f275927ede44df32a49568def3cfcd60d37

--- a/app/views/layouts/_logged_in.html.erb
+++ b/app/views/layouts/_logged_in.html.erb
@@ -153,10 +153,9 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
-<<<<<<< HEAD
 
         <div id="page-wrapper">
-
+          <%= render 'layouts/messages' %>
             <div class="container-fluid">
 
                 <!-- Page Heading -->
@@ -190,7 +189,5 @@
 </div>
 <!-- /#wrapper -->
     <!-- /#wrapper -->
-=======
    </div>
     <!-- /#wrapper -->
->>>>>>> ad3cda04c212d8255d675d909a0be5342c81abd8
