--- a/app/views/layouts/_visitor.html.erb
+++ b/app/views/layouts/_visitor.html.erb
@@ -35,6 +35,7 @@
         </nav>
     <header>
         <div class="header-content">
+          <%= render 'layouts/messages' %>
             <div class="header-content-inner">
                 <h1>Find The Resources You Need to Survive the Scene.</h1>
                 <hr>
