added routes for logged in welcome page, sign up and login works now
Change-Id: I0812ee4a17cb54aff1a4c7b4647ef9ea6635abe1

--- a/app/views/layouts/visitor.html.erb
+++ b/app/views/layouts/visitor.html.erb
@@ -1,4 +1,25 @@
-<body id="page-top">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>SceneSurvivalKit</title>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= csrf_meta_tags %>
+
+    <link href="/assets/logged_in.css" rel="stylesheet">
+      <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="/assets/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/assets/creative.css" type="text/css">
+  </head>
+  <body id="page-top">
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -227,5 +248,12 @@
             </div>
         </div>
     </section>
-
-
+  <%= javascript_include_tag 'application' %>
+    <script src="/assets/cbpAnimatedHeader.js"></script>
+    <script src="/assets/jquery.easing.min.js"></script>
+    <script src="/assets/jquery.fittext.js"></script>
+    <script src="/assets/wow.min.js"></script>
+    <script src="/assets/creative.js"></script>
+    <script src="/assets/classie.js"></script>
+  </body>
+</html>
