fixed routes, fixed login and sign up button, which previously directed user to opposite routes)
Change-Id: I9f8e10201d1eed243069e5547cedce15bde3b428

--- a/app/views/layouts/visitor.html.erb
+++ b/app/views/layouts/visitor.html.erb
@@ -60,8 +60,8 @@
                 <h1>Find The Resources You Need to Survive the Scene.</h1>
                 <hr>
                 <p>Connect with musicians, venues, or visual artists for your show.</p>
-                <%= link_to("Login", new_user_registration_path, class: "btn btn-default btn-xl page-scroll")%>
-                <%= link_to("Sign Up", new_user_session_path, class: "btn btn-primary btn-xl page-scroll")%>
+                <%= link_to("Login", new_user_session_path, class: "btn btn-default btn-xl page-scroll")%>
+                <%= link_to("Sign Up", new_user_registration_path, class: "btn btn-primary btn-xl page-scroll")%>
             </div>
         </div>
     </header>
