--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,4 @@
-<p><%= image_tag @profile.image.url(:thumb) %></p>
+<p><%= image_tag @profile.image.url(:medium) %></p>
 <h1><%= @profile.name %></h1>
 <p> Bio: <%= @profile.bio %></p>
 
