logged in page shows welcome page!
Change-Id: I588564a0cf358a0333a8f36103968cd454022fb7

--- a/app/views/layouts/logged_in.html.erb
+++ b/app/views/layouts/logged_in.html.erb
@@ -167,6 +167,7 @@
             </nav>
        </div>
         <!-- /#wrapper -->
+    <%= yield %>
     <%= javascript_include_tag 'application' %>
     <script src="/assets/cbpAnimatedHeader.js"></script>
     <script src="/assets/jquery.easing.min.js"></script>
