--- a/app/views/layouts/logged_in.html.erb
+++ b/app/views/layouts/logged_in.html.erb
@@ -31,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Scene Survival Kit</a>
+                    <a class="navbar-brand orange-font">Scene Survival Kit</a>
                 </div>
                 <!-- Top Menu Items -->
                 <ul class="nav navbar-right top-nav">
