--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,19 @@
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any styles
+ * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
+ * file per style scope.
+ *= require chosen
+ *= require_tree .
+ *= require_self
+ */
+
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import 'bootstrap/theme';
@@ -7,4 +23,4 @@
  @import "animate.min";
  @import "font-awesome-sprockets";
  @import "font-awesome";
- // @import 'chosen';
+ @import 'chosen';
