--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Musicians#index</h1>
-<p>Find me in app/views/musicians/index.html.erb</p>
+<h3>Musicians</h3>
+
+
+<div class="container">
+  <% @musicians.each do |m| %>
+    <p><%= m.genre %></p>
+    <p><%= m.instrument %></p>
+  <% end %>
+</div>
