--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,12 +6,12 @@
   <div class="field">
     <%= f.label :full_name %><br />
     <%= f.text_field :full_name, autofocus: true %>
-  </div>
+  </div><br />
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email%>
-  </div>
+  </div><br />
 
   <div class="field">
     <%= f.label :password %>
@@ -19,12 +19,12 @@
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+  </div><br />
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  </div><br />
 
   <div class="actions">
     <%= f.submit "Sign up" %>
