--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,16 +1,17 @@
 <h1> NEW PROFILE </h1>
-<%= form_for @profile, html: {multipart: true} do |f| %>
-  <%= f.label(:image)%>
-	<%= f.file_field(:image)%>
+<%= form_for @profile do |f| %>
 	<br/>
-	<%= f.label(:name)%>
+	<b>Display Name:</b><br/>
 	<%= f.text_field(:name)%>
 	<br/>
-	<%= f.label(:phone_number)%>
+	<%= f.label(:phone_number)%><br/>
 	<%= f.text_field(:phone_number)%>
 	<br/>
-	<%= f.label(:bio)%> 
+	<%= f.label(:bio)%> <br/>
 	<%= f.text_area(:bio)%>
+	<br/>
+  <%= f.label(:image)%>
+	<%= f.file_field(:image)%>
 	<br/>
 	<%= f.submit("Submit")%>
 <%end%>
