--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -50,7 +50,7 @@ margin-left: 200px;
 
 
 
-====================================================
+/*====================================================*/
 
 .calendar_grid {
   border: 1px solid gray;
