--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -1,6 +1,7 @@
 <h1 class="text-center"><b>Events</b></h1>	
 <h3 class="text-center">Click on an event title to see more information.</h3>
 
+<div class="col-sm-12 col-lg-6">
 <!-- CALENDAR START -->
 <div id="events">
   <h2 id="month">
@@ -9,7 +10,7 @@
     <%= link_to ">", date: @date.next_month %>
   </h2>
 <!-- this calls the calendar helper (helpers/calendar_helper.rb) -->
-  <div id="calendar">
+<div id="calendar">
   <%= calendar @date do |date| %>
     <%= date.day %>
     <% if @events_by_date[date] %>
@@ -22,6 +23,7 @@
   <% end %>
   </div>
 </div>
+</div>  
 
 <!-- CALENDAR END -->
 
