--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,3 +1,4 @@
+/*
 #events .calendar {
   border-collapse: collapse;
   width: 80%;
@@ -47,7 +48,7 @@ td {
 .form {
 margin-left: 200px;
 }
-
+*/
 
 
 /*====================================================*/
